Deep NN for mouse interaction works. Java intergration with Python+TF needs work